# ESM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
esm/: __init__.py
esm/applications/: __init__.py  auction.py  base.py  insurance.py  mev_dex.py  prediction_market.py  privacy_transfer.py  quantum_nft.py
esm/core/: __init__.py  amplitude.py  branch.py  deposit.py  phase.py  psc.py
esm/simulation/: __init__.py  backup_validator.py  mev_scenario.py  runner.py  threshold_reveal.py  walkthrough.py
esm/visualization/: __init__.py  amplitude_plot.py  interference_plot.py  mev_plot.py  v54_plots.py
examples/: alice_walkthrough.py  applications_demo.py  mev_simulation.py  threshold_demo.py  v54_complete_demo.py
tests/: __init__.py  test_aliases.py  test_amplitude.py  test_applications.py  test_deposit.py  test_mev.py  test_psc.py  test_threshold.py  test_walkthrough.py
